...
final class WeatherViewController: UIViewController {
    
    //MARK: - Identifiers
    
    private enum Identifiers {
        static let mainViewController = "MainViewController"
        static let addButton = "Add button"
        static let tableView = "TableView"
    }
    
    //MARK: - Constants
       
       private enum Constants: String {
...
